# aibios

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .prettierrc  API_REFERENCE.md  API_TEST_REPORT.md  AUTHENTICATION.md  CHANGELOG.md  DATABASE_SCHEMA.md  KNOWN_ISSUES.md  LICENSE  NEXT_PHASE_READY.md  PROJECT_HEALTH.md  README.md  SECURITY_REPORT.md  TEST_REPORT.md  docker-compose.yml  package-lock.json  package.json  payload.json  setup.bat  setup.ps1  setup.sh
assets/: .gitkeep
backend/: .env.example  package-lock.json  package.json  patch_tests.py  patch_tests2.py  pyproject.toml  reactivate_user.py  requirements.txt  run_alembic.py
backend/alembic/: env.py
backend/alembic/versions/: 104b5ed85f8a_baseline_schema.py  2c6de94f15b4_phase1_rbac_columns.py
backend/app/: main.py
backend/app/agents/: agent_graph.py
backend/app/api/: __init__.py
backend/app/config/: __init__.py
backend/app/core/: __init__.py  audit.py  celery_app.py  config.py  crypto.py  database.py  email.py  env_check.py  pagination.py  qdrant_vector.py  realtime.py  redis_cache.py  retry.py  scheduler.py  security.py  telemetry.py
backend/app/database/: __init__.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  auth.py  business.py  enterprise_integrations.py  integrations.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py  auth.py  deals.py  leads.py  pipelines.py  teams.py
backend/app/security/: __init__.py
backend/src/: app.js  server.js
backend/tests/: __init__.py  test_crm_endpoints.py  test_lead_engine.py
(+209 files in other folders)
