[tool.poetry]
name = "aibios-backend"
version = "1.0.0"
description = "AI-BOS Enterprise Backend API Platform"
authors = ["AI-BOS Architect <architect@aibos.enterprise>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.30.0"
motor = "^3.6.0"
redis = "^5.0.8"
qdrant-client = "^1.11.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "==4.0.1"
python-multipart = "^0.0.12"
httpx = "^0.27.2"
langchain-core = "^0.2.30"
langgraph = "^0.2.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []
exclude = [".venv", "venv", "build", "dist"]
